@@ -39,7 +39,7 @@ public:
     static void dump_modules();
 
     static void show_module(const char*);
-    static void show_configs(const char* = nullptr);
+    static void show_configs(const char* = nullptr, bool exact = false);
     static void show_commands(const char* = nullptr);
     static void show_gids(const char* = nullptr);
     static void show_pegs(const char* = nullptr);
